k8s/components/domain-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domain-api
  labels:
    app.kubernetes.io/name: domain-api
    app.kubernetes.io/component: api
spec:
  selector:
    app.kubernetes.io/name: domain-api
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8080
      targetPort: 8081
